force-app/main/default/objects/Table_Matrix_Summary__c/Table_Matrix_Summary__c.object-meta.xml
<CustomObject>
    <label>Table Matrix Summary</label>
    <nameField>
        <displayFormat>TMS-{00000}</displayFormat>
        <label>Matrix Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Table Matrix Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>