force-app/main/default/objects/Table_Matrix_Summary__c/fields/Aggregate_Function__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Function__c</fullName>
    <label>Aggregate Function</label>
    <length>40</length>
    <type>Text</type>
</CustomField>