force-app/main/default/objects/Table_Matrix_Summary__c/fields/All_Dimensions_JSON__c.field-meta.xml
<CustomField>
    <fullName>All_Dimensions_JSON__c</fullName>
    <label>All Dimensions JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>