force-app/main/default/objects/Table_Matrix_Summary__c/fields/Column_Dimensions_JSON__c.field-meta.xml
<CustomField>
    <fullName>Column_Dimensions_JSON__c</fullName>
    <label>Column Dimensions JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>