force-app/main/default/objects/Table_Matrix_Summary__c/fields/Column_Key__c.field-meta.xml
<CustomField>
    <fullName>Column_Key__c</fullName>
    <label>Column Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>