force-app/main/default/objects/Table_Matrix_Summary__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Job</label>
    <referenceTo>Table_Matrix_Job__c</referenceTo>
    <relationshipLabel>Matrix Summaries</relationshipLabel>
    <relationshipName>Matrix_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>