force-app/main/default/objects/Table_Matrix_Summary__c/fields/Row_Dimensions_JSON__c.field-meta.xml
<CustomField>
    <fullName>Row_Dimensions_JSON__c</fullName>
    <label>Row Dimensions JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>