force-app/main/default/objects/Table_Matrix_Summary__c/fields/Row_Key__c.field-meta.xml
<CustomField>
    <fullName>Row_Key__c</fullName>
    <label>Row Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>