force-app/main/default/objects/Table_Matrix_Summary__c/fields/Summary_Alias__c.field-meta.xml
<CustomField>
    <fullName>Summary_Alias__c</fullName>
    <label>Summary Alias</label>
    <length>80</length>
    <type>Text</type>
</CustomField>