force-app/main/default/objects/Table_Matrix_Summary__c/fields/Summary_Key__c.field-meta.xml
<CustomField>
    <fullName>Summary_Key__c</fullName>
    <externalId>true</externalId>
    <label>Summary Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>